feat : Developed overall game logic such as restart logic